# multiverse-bot

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
docs/adr/: 0001-to-agency-over-automation.md  0002-house-policy-defaults-for-official-rule-gaps.md
docs/agents/: issue-tracker.md
docs/research/: riftbound-decks-and-op-rules.md
src/multiverse_bot/: __init__.py  bot.py  store.py
src/multiverse_bot/engine/: __init__.py  actions.py  engine.py  pairing.py  ruleset.py  tiebreakers.py
tests/: conftest.py  test_bindings.py  test_decks.py  test_discord_decks.py  test_discord_defaulting.py  test_discord_names.py  test_discord_results.py  test_discord_thread_tidy.py  test_discord_to_controls.py  test_engine.py  test_golden_fixtures.py  test_golden_reference.py  test_pairing.py  test_persistence.py  test_registration.py  test_result_flow.py  test_standings.py  test_to_agency.py
tests/golden/: generate.py  reference.py  tournament_1.json  tournament_2.json
